syntax = "proto3";

package zitadel.settings.v2beta;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/settings/v2beta;settings";

import "protoc-gen-openapiv2/options/annotations.proto";
import "zitadel/settings/v2beta/settings.proto";

message PasswordComplexitySettings {
  uint64 min_length = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Defines the minimum length of a password.";
      example: "\"8\""
    }
  ];
  bool requires_uppercase = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "defines if the password MUST contain an upper case letter"
    }
  ];
  bool requires_lowercase = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "defines if the password MUST contain a lowercase letter"
    }
  ];
  bool requires_number = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "defines if the password MUST contain a number"
    }
  ];
  bool requires_symbol = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "defines if the password MUST contain a symbol. E.g. \"$\""
    }
  ];
  // resource_owner_type returns if the settings is managed on the organization or on the instance
  ResourceOwnerType resource_owner_type = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "resource_owner_type returns if the settings is managed on the organization or on the instance";
    }
  ];
}
